server/public/styles.css
/* ... */
@media screen and  (max-width: 660px) {
  .column-width50 {
    width: 100%;
  }

  .column-width25 {
    width: 100%;
  }

  .drop-down-list {
    width: 9rem;
    list-style-type: none;
    padding: 0;
  }

  .drop-down-list li {
    font-size: 0.8rem;
    padding: 0.7rem;
  }

  .logout-info {
    padding: 0.5rem;
    width: 75%;
  }

  .logout-info-text {
    font-size: 1.2rem;
  }

  .app-button {
    color: white;
    border: none;
    height: 1.8rem;
    letter-spacing: 3px;
    font-size: 0.8rem;
    font-weight: 700;
    cursor: pointer;
  }

  .country-name {
    font-weight: 600;
    font-size: 1.1rem;
  }

  .city-name {
    font-size: 1rem;
  }

  .image-home {
    margin: 0 0.2rem;
    padding-top: 4rem;
    height: 50vh;
  }

  .edit-form {
    padding: 0.5rem;
  }

  .photo {
    border-radius: 0;
  }

  .carousel-country-name {
    left: 0;
    top: 12%;
  }

  .image-item {
    padding: 0;
    border-bottom: 6px solid rgb(255, 137, 28);
  }

  /* Homepage */
  #highest-scored-review-container {
    padding-inline: 0.5rem;
    margin-block-start: 2rem;
  }

  .list-flex {
    padding-top: 4rem;
    margin: 0 0.2rem;
  }

  .navbar-name-paragraph {
    display: none;
  }

  .search-country-window {
    width: 70%;
  }

  #search-result-list {
    width: 11rem;
  }

  .navbar-app-home {
    display: none;
  }

  .navbar-app-mobile {
    display: inline-block;
    flex-basis: 10%;
  }

  .navbar-app-mobile a {
    color: rgb(240, 131, 52);
    text-decoration: none;
    font-size: 1.2rem;
  }

  .navbar-container {
    padding-inline: 0;
  }

  .navbar-search-box-container {
    flex-basis: 60%;
  }

  .navbar-login-icon-section {
    flex-basis: 10%;
    text-align: end;
  }

  .drop-down-container {
    right: 0.2rem;
  }

  .form-input-element {
    width: 90%;
  }

  .sign-form {
    margin-top: 7rem;
    width: 20rem;
  }

  .comment-textarea {
    width: 100%;
    height: 4rem;
    font-size: 1.1rem;
  }

  .image-container {
    height: 200px;
  }

  .horizontal {
    flex-direction: column;
  }

  .text-container {
    left: 0;
    padding: 0.125rem;
  }

  .detailed-text-container {
    margin-left: 1rem;
    margin-top: 20px;
  }

  .review-container {
    padding: 1rem 0;
  }

  .form-textarea {
    font-size: 0.9rem;
  }

  #name-location-container {
    grid-column: 1/4;
    grid-row: 1;
  }

  #trip-details-name-location-score-container {
    display: flex;
  }

  #scores-trip-details-container {
    margin-inline-start: 1.2rem;
    margin-block-start: 2.08rem;
    grid-column: 3/5;
    grid-row: 1/2;
  }

  .overall-score {
    font-size: 1.2rem;
  }

  #trip-details-container {
    padding-inline: 0.5rem;
    display: grid;
    gap: 0.5rem;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 16rem 20rem 16rem auto auto auto auto;
  }

  #users-score-trip-details {
    margin-block-start: 0.5rem;
    margin-inline-start: 0;
    grid-column: 1/5;
    grid-row: 6;
    font-size: 0.9rem;
  }

  .review-score-header {
    font-size: 1.3rem;
  }

  .review-score-label {
    font-size: 1.065rem;
    font-weight: 500;
    margin-right: 0.5rem;
  }

  .review-title {
    font-size: 1.2rem;
  }

  .review-paragraph {
    font-size: 1rem;
  }

  #review-edit-button-trip-details {
    margin-inline-end: 0;
    grid-row: 5;
    grid-column: 3/5;
  }

  .comments-header {
    font-size: 1.3rem;
  }

  .edit-score-label {
    font-size: 1rem;
    font-weight: 600;
  }

  .edit-form-text-input {
    font-size: 1rem;
  }

  #review-form-container form {
    width: 95%;
  }

  #review-trip-details {
    grid-column: 1/5;
    grid-row: 4/5;
  }

  .name-location-element-user {
    font-size: 1.2rem;
  }

  .score-text {
    font-size: 1rem;
  }

  .name-location-element {
    font-size: 1rem;
  }

  #main-photo-trip-details {
    grid-column: 1/6;
    grid-row: 3/3;
  }

  #comments-trip-details {
    grid-column: 1/6;
    grid-row: 7/auto;
  }
}

